Map collapse resolved on specific route page

--- a/web/modules/custom/it_route_trip_tools/assets/css/routes.css
+++ b/web/modules/custom/it_route_trip_tools/assets/css/routes.css
@@ -211,10 +211,6 @@
   display: inline-flex;
 }
 
-#accordion .collapse.in {
-  padding-right: 24px;
-}
-
 .card-body span, .card-body p {
   white-space: normal;
 }
